created check if logged in util function
