# app/views/groups_resources/groups_resource.py
@@ -1,12 +1,12 @@
 from app.models.groups_model import Groups
 import json
-from app.sessions_ids import sessions_ids
+from app.utils import check_if_logged_in
 
 
 def get_all_groups(session_id: str):
-    if session_id not in sessions_ids.keys():
-        return {
-            "message": "Not logged in"
-        }, 400
+    message, return_code = check_if_logged_in(session_id)
+    if return_code == 400:
+        return message, return_code
+
     groups = Groups.objects()
     return json.loads(groups.to_json()), 200
