# app/views/posts_resources/posts_resource.py
@@ -6,12 +6,15 @@ from app.models.groups_model import Groups
 from app.models.posts_model import Posts
 from app.models.users_model import Users
 from app.sessions_ids import sessions_ids
+from app.utils import check_if_logged_in
 
 
 def create_post(body: Dict):
     session_id = body.get("session_id")
-    if session_id not in sessions_ids.keys():
-        return {"message": "Not logged in."}, 500
+    message, return_code = check_if_logged_in(session_id)
+    if return_code == 400:
+        return message, return_code
+
     group_name = body.get("group_name")
     text = body.get("text")
 
@@ -44,11 +47,11 @@ def create_post(body: Dict):
 
 
 def get_posts_for_user(session_id: str, limit: int = None):
+    message, return_code = check_if_logged_in(session_id)
+    if return_code == 400:
+        return message, return_code
+
     user_name = sessions_ids.get(session_id)
-    if not user_name:
-        return {
-            "message": "not logged in"
-        }, 400
     user = Users.objects.get(user_name=user_name)
     posts = []
     for group_id in user.group_ids:
